# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: task-manager-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: statuses.json  tasks.json  test_status.json  test_task.json  test_user.json
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  footer.html  form.html  index.html  login.html  navbar.html
task_manager/templates/statuses/: create_status.html  delete_status.html  edit_status.html  statuses.html
task_manager/templates/tasks/: create_task.html  delete_task.html  detail_task.html  edit_task.html  tasks.html
task_manager/templates/users/: delete_user.html  edit_user.html  register.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_customuser_last_name.py
