[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-bootstrap4 = "^22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
